# yap-v2

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  TODO-CODE-QUALITY.md  Whitepaper.md  YAP_PROTOCOL.md  auth.config.ts  auth.ts  constants.ts  eslint.config.mjs  lefthook.yml  next.config.ts  package.json  proxy.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx  providers.tsx
config/: navigation.ts
contracts/: .gitignore  Cargo.toml  README.md  package.json
contracts/programs/yap/: Cargo.toml
contracts/programs/yap/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
contracts/programs/yap/src/instructions/: admin.rs  burn.rs  claim.rs  distribute.rs  initialize.rs  mod.rs  trigger_inflation.rs
contracts/programs/yap/src/utils/: merkle.rs
docs/: security.md  ux_good.md
hooks/: index.ts  useBreakpoint.ts  useDebounced.ts  useDiagnosticInfo.ts  useDrawer.ts  useImageUpload.ts  useIntersectionObserver.ts  usePushNotifications.ts  useStandalone.ts  useToast.ts
lib/: database.ts  logger.ts  queryClient.ts  queryKeys.ts  r2-storage.ts  user-helpers.ts  webpush.ts
migrations/: 20250920_users.sql  20250925_posts.sql  20251002_upvotes.sql  20251010_daily_actions.sql  20251020_notifications.sql  20251101_invite_system.sql  20251116_follow_system.sql  20251122_rewards_system.sql  20251130_onchain_staking_cache.sql  20251205_notification_dedup_index.sql  20251224_gamified_notifications.sql  20251227_notification_stored_messages.sql  20251231_bug_reports.sql  (+5 more)
(+255 files in other folders)
