[package]
name = "yap"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "YAP Token - Solana Program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
borsh = "1.5"
spl-token = { version = "9.0", features = ["no-entrypoint"] }
thiserror = "2.0"
